--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Model Context Protocol server with enhanced Titan Memory implementation",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "babel src --out-dir build --extensions '.ts,.js'",
     "watch": "tsc -w",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "inspector": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand",
@@ -23,6 +23,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.27.2",
+    "@babel/core": "^7.27.1",
+    "@babel/node": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
     "@jest/globals": "^29.7.0",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
